# orda-cutile-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  session_0.md
docs/: BLOCKERS.md
src/: api.rs  config.rs  lib.rs  main.rs  mat.rs  quant.rs  resolver.rs  teacher.rs
src/cuda/: ce_kernel.rs  kl_kernel.rs  launch.rs  mod.rs
src/reference/: cross_entropy.rs  kl.rs  mod.rs
tests/: end_to_end.rs
