[package]
name = "orda-cutile-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
description = "ORDA fused Cross-Entropy + forward-KL knowledge-distillation loss, ported to Rust with a CPU reference and cuTile Rust GPU kernels."
license-file = "LICENSE"

[features]
default = []
# The cuTile Rust GPU backend. Requires an NVIDIA GPU (sm_80+) and a CUDA 13.2+
# toolkit. This feature CANNOT be built on a machine without a CUDA toolkit
# (the `cuda-bindings` build script hard-requires one). See docs/BLOCKERS.md.
cuda = ["dep:cutile", "dep:cuda-core", "dep:cuda-async"]

[dependencies]
cutile = { version = "0.2.0", optional = true }
cuda-core = { version = "0.2.0", optional = true }
cuda-async = { version = "0.2.0", optional = true }

[lib]
name = "orda_cutile_rs"
path = "src/lib.rs"

[[bin]]
name = "orda-demo"
path = "src/main.rs"

[profile.test]
opt-level = 2
